2012-04-05  Bastien Guerry  <bzg@altern.org>

	* color.el (color-lighten-name): Fix typo.

2012-04-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-find-fill-point): Remove unused code; don't break a line
	before kinsoku-bol characters nor within kinsoku-eol characters.

2012-03-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sync.el (gnus-topic-alist, gnus-group-topic)
	(gnus-topic-create-topic, gnus-topic-enter-dribble): Silence compiler.
	(gnus-sync-read): Use mapc instead of mapcar.

	* mm-archive.el: Require mm-decode for some macros.
	(gnus-recursive-directory-files, mailcap-extension-to-mime): Silence
	the byte compiler.
	(mm-archive-decoders): New function that returns the value of
	the mm-archive-decoders variable.

	* mm-decode.el: Don't require mm-archive; autoload mm-archive functions
	instead.
	(mm-dissect-singlepart): Use the function mm-archive-decoders.

	* nnimap.el (gnus-refer-thread-use-nnir):
	* nnmail.el (mail-send-and-exit): Silence the byte compiler.

2012-03-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-compat.el: Define `bound-and-true-p' for XEmacs.

2012-03-12  Peter Münster  <pmrb@free.fr>

	* gnus-demon.el (gnus-demon-timers): Now a plist (function -> timer).
	(gnus-demon-cancel): Ditto.
	(gnus-demon-run-callback): When function cannot be called due to low
	idleness, call it when idleness reaches the expected value, instead of
	waiting another timer period.
	(gnus-demon-init): Add `time' to arguments of call-back.

2012-03-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* dgnushack.el: Bind `gnus-registry-enabled' for XEmacs.

	* gnus.el: Register gnus-registry functions.

	* gnus-registry.el (gnus-try-warping-via-registry): Moved here and
	indent.

	* gnus-int.el (gnus-warp-to-article): Check whether the registry is
	enabled before warping.

2012-03-22  Dave Abrahams  <dave@boostpro.com>

	* gnus-sum.el (gnus-summary-insert-subject): Record information in the
	registry about each article retrieved.
